prometheus/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: monitoring
spec:
  tls:
  - secretName: prometheus-tls
    hosts:
    - prometheus.lukeaddison.co.uk
  rules:
  - host: prometheus.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
